--- a/WordPress/Resources/he.lproj/Localizable.strings
+++ b/WordPress/Resources/he.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-05-12 16:54:48+0000 */
+/* Translation-Revision-Date: 2021-05-27 17:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: he_IL */
@@ -316,7 +316,7 @@
 "ADD IMAGE OR VIDEO" = "להוסיף תמונה או וידאו";
 
 /* No comment provided by engineer. */
-"ADD LINK" = "ADD LINK";
+"ADD LINK" = "להוסיף קישור";
 
 /* No comment provided by engineer. */
 "ADD VIDEO" = "להוסיף וידאו";
@@ -2148,7 +2148,7 @@
 "Double tap to add a block" = "יש להקיש פעמיים כדי להוסיף בלוק";
 
 /* No comment provided by engineer. */
-"Double tap to add a link." = "Double tap to add a link.";
+"Double tap to add a link." = "יש להקיש פעמיים כדי להוסיף קישור.";
 
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "יש להקיש פעמיים כדי להתעלם";
@@ -3103,7 +3103,7 @@
 "If removed, this follower will stop receiving notifications about this site, unless they re-follow." = "לאחר הסרת עוקב זה, הוא יפסיק לקבל הודעות לגבי אתר זה, אלא אם יגדיר מעקב מחדש.";
 
 /* Message explaining that they will need to install Jetpack on one of their sites. */
-"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account.";
+"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "אם כבר יש לך אתר, יהיה עליך להתקין את התוסף החינמי של Jetpack ולחבר אותו לחשבון שלך ב-WordPress.com.";
 
 /* Legal disclaimer for signing up. The underscores _..._ denote underline. */
 "If you continue with Apple or Google and don't already have a WordPress.com account, you are creating an account and you agree to our _Terms of Service_." = "אם בחרת להמשיך עם Apple או עם Google ועדיין אין לך חשבון ב-WordPress.com, חשבון ייווצר עבורך ויש הסכמה מצידך לתנאי השירות שלנו.";
@@ -3638,7 +3638,7 @@
 "Log in with your WordPress.com username and password." = "יש להתחבר באמצעות שם המשתמש והסיסמה של WordPress.com.‏";
 
 /* LogOut confirmation text, whenever there are no local changes */
-"Log out of Jetpack?" = "Log out of Jetpack?";
+"Log out of Jetpack?" = "האם להתנתק מ-Jetpack?";
 
 /* LogOut confirmation text, whenever there are no local changes */
 "Log out of WordPress?" = "האם להתנתק מ-WordPress?";
@@ -5601,7 +5601,7 @@
 "See All" = "הצגת הכול";
 
 /* Action button linking to instructions for installing Jetpack.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"See Instructions" = "See Instructions";
+"See Instructions" = "להציג את ההוראות";
 
 /* Caption displayed in promotional screens shown during the login flow.
    Shown in the prologue carousel (promotional screens) during first launch. */
@@ -6665,7 +6665,7 @@
 "There was an error loading activities" = "אירעה שגיאה בטעינת הפעילויות";
 
 /* Text displayed when there is a failure loading notification likes. */
-"There was an error loading likes" = "There was an error loading likes";
+"There was an error loading likes" = "אירעה שגיאה בטעינת הלייקים";
 
 /* Text displayed when there is a failure loading the plan list */
 "There was an error loading plans" = "אירעה שגיאה בעת טעינת התוכניות";
@@ -6859,7 +6859,7 @@
 "To use stats on your site, you'll need to install the Jetpack plugin." = "כדי להשתמש בנתונים סטטיסטיים באתר שלך, עליך להתקין את התוסף של Jetpack.";
 
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
-"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "To use this app for %@ you'll need to have the Jetpack plugin installed and activated.";
+"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "כדי להשתמש באפליקציה הזאת עבור %@ עליך להתקין את התוסף של Jetpack ולהפעיל אותו.";
 
 /* Insights 'Today' header
    Label for most recent stat row.
@@ -6959,7 +6959,7 @@
 "Try Again" = "לנסות שוב";
 
 /* Action button that will restart the login flow.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"Try With Another Account" = "Try With Another Account";
+"Try With Another Account" = "לנסות עם חשבון אחר";
 
 /* Text displayed in the view when there aren't any backups to display for a given filter. */
 "Try adjusting your date range filter" = "כדאי לנסות להתאים את המסנן של טווח התאריכים";
@@ -7701,7 +7701,7 @@
 "We use other tracking tools, including some from third parties. Read about these and how to control them." = "אנחנו משתמשים בכלים למעקב, כולל כלים של צד שלישי. אפשר לקרוא פרטים על אלו על אלו ועל אופן השליטה בהם.";
 
 /* Message explaining that WordPress was not detected. */
-"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version.";
+"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "לא הצלחנו למצוא אתר WordPress בכתובת שהזנת. עליך לוודא שהאפליקציה של WordPress מותקנת ושהפעלת את הגרסה האחרונה.";
 
 /* Error message displayed when an error occurred sending the magic link email. */
 "We were unable to send you an email at this time. Please try again later." = "לא הצלחנו לשלוח אליך אימייל בשלב זה. יש לנסות שוב מאוחר יותר.";
@@ -8398,7 +8398,7 @@
 "your new domain %@ is being set up. Your site is doing somersaults in excitement!" = "כעת מתבצע תהליך ההגדרה של הדומיין החדש שלך, %@. האתר שלך עושה סלטות מרוב התרגשות!";
 
 /* Placeholder for site url, if the url is unknown.Presented when logging in with a site address that does not have a valid Jetpack installation.The error would read: to use this app for your site you'll need... */
-"your site" = "your site";
+"your site" = "האתר שלך";
 
 /* Label for button to log in using Google. The {G} will be replaced with the Google logo. */
 "{G} Log in with Google." = "{G} התחברות עם Google.";
