--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-05-19 17:29:36+0000 */
+/* Translation-Revision-Date: 2021-05-28 15:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -316,7 +316,7 @@
 "ADD IMAGE OR VIDEO" = "AGGIUNGI IMMAGINE O VIDEO";
 
 /* No comment provided by engineer. */
-"ADD LINK" = "ADD LINK";
+"ADD LINK" = "AGGIUNGI LINK";
 
 /* No comment provided by engineer. */
 "ADD VIDEO" = "AGGIUNGI VIDEO";
@@ -2148,7 +2148,7 @@
 "Double tap to add a block" = "Tocca due volte per aggiungere un blocco";
 
 /* No comment provided by engineer. */
-"Double tap to add a link." = "Double tap to add a link.";
+"Double tap to add a link." = "Tocca due volte per aggiungere un link.";
 
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "Doppio tocco per ignorare";
@@ -3103,7 +3103,7 @@
 "If removed, this follower will stop receiving notifications about this site, unless they re-follow." = "La rimozione impedirà al follower di ricevere ulteriori notifiche sul sito a meno che non riprenda a seguirlo.";
 
 /* Message explaining that they will need to install Jetpack on one of their sites. */
-"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account.";
+"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "Se hai già un sito, dovrai installare il plugin Jetpack gratuito e collegarlo al tuo account WordPress.com.";
 
 /* Legal disclaimer for signing up. The underscores _..._ denote underline. */
 "If you continue with Apple or Google and don't already have a WordPress.com account, you are creating an account and you agree to our _Terms of Service_." = "Se continui con Apple o Google e non hai già un account WordPress.com, crei un account e accetti i nostri _Termini di servizio_.";
@@ -3638,7 +3638,7 @@
 "Log in with your WordPress.com username and password." = "Accedi con il nome utente e la password di WordPress.com.";
 
 /* LogOut confirmation text, whenever there are no local changes */
-"Log out of Jetpack?" = "Log out of Jetpack?";
+"Log out of Jetpack?" = "Uscire da Jetpack?";
 
 /* LogOut confirmation text, whenever there are no local changes */
 "Log out of WordPress?" = "Desideri disconnetterti da WordPress?";
@@ -5601,7 +5601,7 @@
 "See All" = "Visualizza tutti";
 
 /* Action button linking to instructions for installing Jetpack.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"See Instructions" = "See Instructions";
+"See Instructions" = "Visualizza istruzioni";
 
 /* Caption displayed in promotional screens shown during the login flow.
    Shown in the prologue carousel (promotional screens) during first launch. */
@@ -6665,7 +6665,7 @@
 "There was an error loading activities" = "Si è verificato un errore durante il caricamento delle attività";
 
 /* Text displayed when there is a failure loading notification likes. */
-"There was an error loading likes" = "There was an error loading likes";
+"There was an error loading likes" = "Si è verificato un errore durante il caricamento dei Mi piace";
 
 /* Text displayed when there is a failure loading the plan list */
 "There was an error loading plans" = "Si è verificato un errore nel caricamento dei piani";
@@ -6859,7 +6859,7 @@
 "To use stats on your site, you'll need to install the Jetpack plugin." = "Per utilizzare le statistiche sul tuo sito, sarà necessario installare il plugin di Jetpack.";
 
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
-"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "To use this app for %@ you'll need to have the Jetpack plugin installed and activated.";
+"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Per usare quest'app per %@, il plugin Jetpack dovrà essere installato e attivato.";
 
 /* Insights 'Today' header
    Label for most recent stat row.
@@ -6959,7 +6959,7 @@
 "Try Again" = "Riprova";
 
 /* Action button that will restart the login flow.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"Try With Another Account" = "Try With Another Account";
+"Try With Another Account" = "Prova con un altro account";
 
 /* Text displayed in the view when there aren't any backups to display for a given filter. */
 "Try adjusting your date range filter" = "Prova a regolare il filtro per intervallo di date";
@@ -7701,7 +7701,7 @@
 "We use other tracking tools, including some from third parties. Read about these and how to control them." = "Utilizziamo altri strumenti di tracciamento, compresi alcuni di terzi. Leggi le informazioni sugli strumenti e come utilizzarli.";
 
 /* Message explaining that WordPress was not detected. */
-"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version.";
+"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "Non siamo in grado di rilevare un sito WordPress all'indirizzo inserito. Assicurati che WordPress sia installato e di disporre dell'ultima versione disponibile.";
 
 /* Error message displayed when an error occurred sending the magic link email. */
 "We were unable to send you an email at this time. Please try again later." = "Al momento non siamo stati in grado di inviarti un'email. Riprova più tardi.";
@@ -8398,7 +8398,7 @@
 "your new domain %@ is being set up. Your site is doing somersaults in excitement!" = "Il tuo nuovo dominio %@ è configurato. Il tuo sito fa i salti di gioia!";
 
 /* Placeholder for site url, if the url is unknown.Presented when logging in with a site address that does not have a valid Jetpack installation.The error would read: to use this app for your site you'll need... */
-"your site" = "your site";
+"your site" = "il tuo sito";
 
 /* Label for button to log in using Google. The {G} will be replaced with the Google logo. */
 "{G} Log in with Google." = "{G} Accedi con Google.";
