--- a/WordPress/Resources/tr.lproj/Localizable.strings
+++ b/WordPress/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-05-12 02:01:11+0000 */
+/* Translation-Revision-Date: 2021-05-28 13:54:54+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: tr */
@@ -316,7 +316,7 @@
 "ADD IMAGE OR VIDEO" = "GÖRSEL VEYA VİDEO EKLE";
 
 /* No comment provided by engineer. */
-"ADD LINK" = "ADD LINK";
+"ADD LINK" = "BAĞLANTI EKLE";
 
 /* No comment provided by engineer. */
 "ADD VIDEO" = "VİDEO EKLE";
@@ -2148,7 +2148,7 @@
 "Double tap to add a block" = "Blok eklemek için çift dokunun";
 
 /* No comment provided by engineer. */
-"Double tap to add a link." = "Double tap to add a link.";
+"Double tap to add a link." = "Bağlantı eklemek için iki kez dokunun.";
 
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "Kapatmak için çift dokunun";
@@ -3103,7 +3103,7 @@
 "If removed, this follower will stop receiving notifications about this site, unless they re-follow." = "Eğer kaldırılırsa, bu takipçi site hakkında bildirimleri almayı durduracaktır, tabi tekrar takip etmezse.";
 
 /* Message explaining that they will need to install Jetpack on one of their sites. */
-"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account.";
+"If you already have a site, you’ll need to install the free Jetpack plugin and connect it to your WordPress.com account." = "Zaten bir siteniz varsa, ücretsiz Jetpack eklentisini yüklemeniz ve WordPress.com hesabınıza bağlamanız gerekir.";
 
 /* Legal disclaimer for signing up. The underscores _..._ denote underline. */
 "If you continue with Apple or Google and don't already have a WordPress.com account, you are creating an account and you agree to our _Terms of Service_." = "Apple veya Google ile devam ederseniz ve bir WordPress.com hesabınız yoksa, bir hesap oluşturur ve _Hizmet Şartlarımızı kabul edersiniz.";
@@ -3638,7 +3638,7 @@
 "Log in with your WordPress.com username and password." = "WordPress.com kullanıcı adı ve şifreniz ile oturum açın.";
 
 /* LogOut confirmation text, whenever there are no local changes */
-"Log out of Jetpack?" = "Log out of Jetpack?";
+"Log out of Jetpack?" = "Jetpack'ten çıkılsın mı?";
 
 /* LogOut confirmation text, whenever there are no local changes */
 "Log out of WordPress?" = "WordPress'den çıkış yapmak ister misiniz?";
@@ -5601,7 +5601,7 @@
 "See All" = "Tümünü gör";
 
 /* Action button linking to instructions for installing Jetpack.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"See Instructions" = "See Instructions";
+"See Instructions" = "Talimatlara bakın";
 
 /* Caption displayed in promotional screens shown during the login flow.
    Shown in the prologue carousel (promotional screens) during first launch. */
@@ -6665,7 +6665,7 @@
 "There was an error loading activities" = "Etkinlikler yüklenirken bir hata oluştu.";
 
 /* Text displayed when there is a failure loading notification likes. */
-"There was an error loading likes" = "There was an error loading likes";
+"There was an error loading likes" = "Beğeniler yüklenirken bir hata oluştu";
 
 /* Text displayed when there is a failure loading the plan list */
 "There was an error loading plans" = "Planlar yüklenirken bir hata oluştu";
@@ -6859,7 +6859,7 @@
 "To use stats on your site, you'll need to install the Jetpack plugin." = "Sitenizde istatistikleri kullanmak için Jetpack eklentisini yüklemelisiniz.";
 
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
-"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "To use this app for %@ you'll need to have the Jetpack plugin installed and activated.";
+"To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Bu uygulamayı %@ için kullanabilmek istiyorsanız Jetpack eklentisini yükleyip etkinleştirmeniz gerekir.";
 
 /* Insights 'Today' header
    Label for most recent stat row.
@@ -6959,7 +6959,7 @@
 "Try Again" = "Tekrar deneyin";
 
 /* Action button that will restart the login flow.Presented when logging in with a site address that does not have a valid Jetpack installation */
-"Try With Another Account" = "Try With Another Account";
+"Try With Another Account" = "Başka Bir Hesapla Deneyin";
 
 /* Text displayed in the view when there aren't any backups to display for a given filter. */
 "Try adjusting your date range filter" = "Tarih aralığı filtrenizi ayarlamayı deneyin";
@@ -7701,7 +7701,7 @@
 "We use other tracking tools, including some from third parties. Read about these and how to control them." = "Üçüncü taraflara ait olanlar dahil diğer izleme araçlarını kullanıyoruz. Bunlar ve nasıl kontrol edilecekleri hakkında bilgi alın.";
 
 /* Message explaining that WordPress was not detected. */
-"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version.";
+"We were not able to detect a WordPress site at the address you entered. Please make sure WordPress is installed and that you are running the latest available version." = "Girdiğiniz adreste bir WordPress sitesi tespit edemedik. Lütfen WordPress'in kurulu olduğundan ve mevcut en son sürümü çalıştırdığınızdan emin olun.";
 
 /* Error message displayed when an error occurred sending the magic link email. */
 "We were unable to send you an email at this time. Please try again later." = "Size şu anda e-posta gönderemedik. Lütfen daha sonra tekrar deneyin.";
@@ -8398,7 +8398,7 @@
 "your new domain %@ is being set up. Your site is doing somersaults in excitement!" = "yeni alan adınız %@ ayarlanıyor. Siteniz sevinçten taklalar atıyor!";
 
 /* Placeholder for site url, if the url is unknown.Presented when logging in with a site address that does not have a valid Jetpack installation.The error would read: to use this app for your site you'll need... */
-"your site" = "your site";
+"your site" = "siteniz";
 
 /* Label for button to log in using Google. The {G} will be replaced with the Google logo. */
 "{G} Log in with Google." = "{G} Google ile giriş yap.";
